Refresh button, updating options, fixed lobby bug
Lobby selector now has a refresh button, options are now updated in real time not only when users is present in lobby (thanks to it user can see real settings in lobbe selector). When both users left the room, room was not removed because of the bug now it is fixed and working as intended

--- a/client/index.html
+++ b/client/index.html
@@ -57,6 +57,12 @@
     </div>
 
     <div id="lobby-selector">
+      <h2>Lobby Selector</h2>
+      <div class="refresh-box">
+        <button type="submit" id="btn-refresh">
+          <span>Refresh <i class="fas fa-sync-alt"></i></span>
+        </button>
+      </div>
       <div class="lobby-box">
         <div class="lobbies-list"></div>
       </div>
