Game screen and end screen
Both of the views are now fully responsive

--- a/client/index.html
+++ b/client/index.html
@@ -127,7 +127,7 @@
     </div>
 
     <div class="end-screen" id="end-screen">
-      <span id="result"></span>
+      <span id="result">You won!</span>
       <div class="end-info">
         <div class="winner-info" id="winner-info">
           <span id="winner-name">Nickname</span>
@@ -136,7 +136,7 @@
             <button type="submit" class="arrow-btn left" id="winner-increase">
               <i class="fas fa-4x fa-chevron-left"></i>
             </button>
-            <canvas width="500" height="500" id="winner-maps"></canvas>
+            <canvas id="winner-maps"></canvas>
             <button type="submit" class="arrow-btn right" id="winner-reduce">
               <i class="fas fa-4x fa-chevron-right"></i>
             </button>
@@ -149,7 +149,7 @@
             <button type="submit" class="arrow-btn left" id="loser-increase">
               <i class="fas fa-4x fa-chevron-left"></i>
             </button>
-            <canvas width="500" height="500" id="loser-maps"></canvas>
+            <canvas id="loser-maps"></canvas>
             <button type="submit" class="arrow-btn right" id="loser-reduce">
               <i class="fas fa-4x fa-chevron-right"></i>
             </button>
