--- a/client/index.html
+++ b/client/index.html
@@ -32,7 +32,7 @@
             type="text"
             placeholder="Nickname"
             id="nickname"
-            value="XXXXXX"
+            value=""
             autocomplete="off"
             value=""
           />
