--- a/client/index.html
+++ b/client/index.html
@@ -180,13 +180,12 @@
       </div>
     </div>
 
-    <script src="/client/scripts/game/Utility.js"></script>
-
-    <script src="/client/scripts/game/Debug.js"></script>
-    <script src="/client/scripts/game/enums/Colors.js"></script>
-    <script src="/client/scripts/game/enums/Positions.js"></script>
-    <script src="/client/scripts/game/Draw.js"></script>
-    <script src="/client/scripts/game/Game.js"></script>
+    <script src="/scripts/game/Utility.js"></script>
+    <script src="/scripts/game/Debug.js"></script>
+    <script src="/scripts/game/enums/Colors.js"></script>
+    <script src="/scripts/game/enums/Positions.js"></script>
+    <script src="/scripts/game/Draw.js"></script>
+    <script src="/scripts/game/Game.js"></script>
     <script>
       // let map = [
       //   ["R", "0", "G", "0", "O"],
@@ -207,6 +206,6 @@
     <!-- Client scripts -->
     <script src="Client.js"></script>
     <!-- Animations -->
-    <script src="/client/scripts/animations/Buttons.js"></script>
+    <script src="/scripts/animations/Buttons.js"></script>
   </body>
 </html>
