Fixed drawing pipes to end point

--- a/client/index.html
+++ b/client/index.html
@@ -110,7 +110,9 @@
         <br />
         <button type="submit" id="start-game"><span>START GAME</span></button>
         <span class="start-game-info"
-          >*When pipes can touch map generation is faster</span
+          >*If map size is greater than 6, map can't be generated in reasonable
+          time. Please stick to maps between 1x1-6x6 and colors beetwen 1-6
+          (where 6 cannot be used inside 1x1, 2x2 etc.)</span
         >
         <br />
       </div>
