Changed link in readme

--- a/client/index.html
+++ b/client/index.html
@@ -168,7 +168,7 @@
     </div>
 
     <button class="leave-btn" type="submit" id="leave-room">
-      <i class="fas fa-2x fa-arrow-left reset-arrow"></i>Back to lobby
+      <i class="fas fa-2x fa-arrow-left reset-arrow"></i>Back to start
     </button>
 
     <div id="alertBox"></div>
